--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="network_failure">Network Failure</string>
     <string name="search_peer">Search Peer</string>
     <string name="offline">Offline</string>
+    <string name="searching_peer">Searching Peer</string>
 </resources>
